# services/api/docs/swagger.yaml
@@ -121,6 +121,23 @@ definitions:
     - date_end
     - date_start
     type: object
+  gateway.CiscoSetupResponse:
+    properties:
+      certificate_import_uri:
+        type: string
+      certificate_password:
+        type: string
+      connection_create_uri:
+        type: string
+      connection_name:
+        type: string
+      expires_at:
+        type: string
+      server_address:
+        type: string
+      server_port:
+        type: integer
+    type: object
   gateway.CreateUserData:
     properties:
       description:
@@ -1771,6 +1788,43 @@ paths:
           schema:
             $ref: '#/definitions/request.ErrorResponse'
       summary: Gateway ocserv user deletion
+      tags:
+      - Gateway
+  /gateway/users/{username}/cisco-setup:
+    post:
+      description: Creates Cisco Secure Client certificate import and connection creation
+        URIs for an existing ocserv user.
+      parameters:
+      - description: Bearer GATEWAY_API_TOKEN
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Ocserv username
+        in: path
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/gateway.CiscoSetupResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/request.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middlewares.Unauthorized'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/request.ErrorResponse'
+      summary: Gateway Cisco Secure Client setup
       tags:
       - Gateway
   /gateway/users/{username}/status:
